@@ -181,6 +181,10 @@
     background-image:url(../icons/wand.png) !important;
 }
 
+.merge {
+    background-image:url(../icons/arrow_join.png) !important;
+}
+
 
 .x-smallhdr {
     float:left;
